13-network-policies/deny-all-ing-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ing
spec:
  podSelector: {} # selects everything
  policyTypes:
  - Ingress
  - Egress
